fix slider on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -5,10 +5,7 @@
 
   .section-hero {
     width: 100%;
-  }
-
-  .section-hero-background {
-    width: 100%;
+    overflow-x: hidden;
   }
 
   .section-hero-background {
